.deploy/istio/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: market-service-ingress
spec:
  hosts:
    - '*'
  gateways:
    - ingress-gateway
  http:
    - match:
        - uri:
            prefix: "/market"
      rewrite:
        uri: " "
      route:
        - destination:
            host: market-app-service
